# Summer-2022-SWE-Internship

./: README.md
Experiment_Language_C_EM_File_Input/: filein.c  filein.html  filein.js  filein.wasm
Experiment_Language_C_EM_Hello_World/: a.out.wasm  hello.c  hello.html  hello.js  template.html
Experiment_Language_C_EM_User_Input_1/: input.c  input.html  input.js  input.wasm
Experiment_Language_C_EM_User_Input_2/: input2.c  input2.html  input2.js  input2.wasm
Experiment_Language_C_Hello_World/: README.md  index.html  main.wasm  scripts.js
Experiment_Language_Go_File_Input_1/: file.go  file.wasm  index.html
Experiment_Language_Go_Hello_World/: hello.go  hello.html
Experiment_Language_Go_User_Input_1/: hello.html  hello.wasm
Experiment_Language_Rust_File_Input/: Cargo.toml  index.html
Experiment_Language_Rust_File_Input/src/: lib.rs
Experiment_Language_Rust_Hello_World/: index.html
Experiment_Language_Rust_Hello_World/src/: lib.rs
Experiment_Language_Rust_User_Input/: Cargo.toml  index.html
Experiment_Language_Rust_User_Input/src/: lib.rs
PopsicleSticks/: README.md  package.json
PopsicleSticks/src/: App.js
