[package]
name = "file-input-1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.81"
log = "0.4.17"
wasm-logger = "0.2.0"
js-sys = "0.3.58"

[dependencies.web-sys]
version = "0.3.58"
features = [
	"Window",
	"Document",
	"Event", 
	"FileReader", 
	"File", 
	"FileList", 
	"HtmlInputElement"
]
